# nix-tests

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
examples/: simple_test.nix
lib/: tests.nix
scripts/: nix-tests.sh
src/: config.rs  files.rs  main.rs  reports.rs  runners.rs
