[package]
name = "nix-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
futures = "0.3.31"
num_cpus = "1.17.0"

[dev-dependencies]
assert2 = "0.3.16"
mockall = "0.14.0"
tempfile = "3.14"
